src/main/kotlin/com/example/weshowbackend/global/error/custom/ErrorProperty.kt
package com.example.weshowbackend.global.error.custom

interface ErrorProperty {
    fun status(): Int
    fun message(): String
}